--- a/House Price Prediction/Conclusion  House Price Prediction.ipynb
+++ b/House Price Prediction/Conclusion  House Price Prediction.ipynb
@@ -93,6 +93,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 6 Normal Features processing method "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Categorical type:  \n",
+    " 1. Has significant relationship with Target variable:\n",
+    "    1. Have some unique categories : Convert to concessive integer type. \n",
+    "    2. Have only few unique categories : \n",
+    " 2. Doesn't have close relationship with target variable:  \n",
+    "    Create dummy variables for the feature.  \n",
+    "    ** Note: When Feature is discrete numerical type, treat it as categorical type. **\n",
+    "2. Numerical type:  \n",
+    " 1. Has big correlation with Target variable:  \n",
+    " Divide the feature into discrete bins, (Then Dummy it)?\n",
+    " 2. Has small correlation with Target variable:  \n",
+    " See the concrete situation: If most values are 0(or some number else), create Falg feature(bool type)  \n",
+    " Or just Delete the feature.\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Noticing: Many situation is flexible, such if some category value count is very low, you can merge it into other category.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
