--- a/House Price Prediction/Conclusion  House Price Prediction.ipynb
+++ b/House Price Prediction/Conclusion  House Price Prediction.ipynb
@@ -125,7 +125,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Noticing: Many situation is flexible, such if some category value count is very low, you can merge it into other category.**"
+    "** Noticing: Many situation is flexible,  \n",
+    "such (1)if some category value count is very low, you can merge it into other category.  \n",
+    "(2)You can also make both a Falg feature and bins the featur as well.  \n",
+    "Anyway, Be imaginative!\n",
+    "**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 7 About skew Features:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "** Note: I am using the Box-Cox transformation to transform non-normal variables into a normal shape. Normality is an important assumption for many statistical techniques; if your data isn't normal, applying a Box-Cox means that you are able to run a broader number of tests.**"
    ]
   },
   {
